# Bindars

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD-PARTY-NOTICES  index.html  package-lock.json  package.json  tsconfig.workspace-tests.json  vite.config.ts
.cargo/: audit.toml
.github/workflows/: audit.yml  ci.yml  release.yml
docs/: platform-distribution.md  print-test-matrix.md
packaging/arch/: PKGBUILD
scripts/: prepare-appimage-runtime.sh  tauri-cli.sh
src/: App.tsx  app.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/assets/: welcome.md
src/components/: AnnotationsPanel.tsx  AppErrorBoundary.tsx  CodeBlock.tsx  CommandPalette.tsx  ConfirmDialog.tsx  DropZone.tsx  EmptyState.tsx  ErrorBanner.tsx  FocusBar.tsx  FountainRenderer.tsx  Header.tsx  HighlightToolbar.tsx  MarkdownEditor.tsx  MarkdownRenderer.tsx  MermaidBlock.tsx  PresentationBar.tsx  PresentationView.tsx  ReaderControls.tsx  RecentFiles.tsx  SearchBar.tsx  ShortcutOverlay.tsx  Sidebar.tsx  TableOfContents.tsx  ToastProvider.tsx  WorkspacePanel.tsx
src/hooks/: useAnnotations.ts  useDragDrop.ts  useEditor.ts  useFileWatcher.ts  useHeadingObserver.ts  useHeadings.ts  (+12 more)
tests/: code-text.test.cjs  export-html.test.cjs  fountain-workspace-index.test.cjs  print-css-contract.test.cjs  print-export.test.cjs  print-state.test.cjs  reader-settings.test.cjs  reading-stats.test.cjs  slide-parser.test.cjs  workspace-insights.test.cjs  workspace-search.test.cjs
(+22 files in other folders)
